--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -1,3 +1,25 @@
 // Place all the styles related to the contacts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.contact{
+	border-bottom: solid 1px #CCC;
+	padding: 5px 0px;
+}
+
+.contact p{
+	
+	margin: 4px 0px;
+}
+
+.contact .admin{
+	display:none;
+}
+
+.contact.hover .admin{
+	display:inline;
+}
+
+.contact.hover{
+	background: #F0F0F0;
+}
