--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,39 +1,31 @@
-<h1>Listing contacts</h1>
+<div class="page-header">
+  <h1 >All contacts</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Category</th>
-      <th>Area</th>
-      <th>Phone</th>
-      <th>Website</th>
-      <th>Email</th>
-      <th>Info</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<%= link_to "Add a new contact", new_contact_path, class: "btn btn-success" %>
 
-  <tbody>
-    <% @contacts.each do |contact| %>
-      <tr>
-        <td><%= contact.name %></td>
-        <td><%= contact.category %></td>
-        <td><%= contact.area %></td>
-        <td><%= contact.phone %></td>
-        <td><%= contact.website %></td>
-        <td><%= contact.email %></td>
-        <td><%= contact.info %></td>
-        <td><%= link_to 'Show', contact %></td>
-        <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
-        <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<% @contacts.each do |contact| %>
 
-<br>
+  <div class="contact">
+    <strong>Name: <%= contact.name %></strong>
+    <p>Phone number: <%= contact.phone %></p>
+    <p>Category: <%= contact.category %></p>
+    <p>Area: <%= contact.area %></p>
+    <p>Website: <%= contact.website %></p>
+    <p>Email: <%= contact.email %></p>
+    <p>Info: <%= contact.info %></p>
 
-<%= link_to 'New Contact', new_contact_path %>
+    <div class="meta">
+      <%= link_to "Show", contact %> |
+      <span class="admin">
+        <%= link_to "Edit", edit_contact_path(contact) %> |
+        <%= link_to "Delete", contact, method: :delete, data: { confirm: "Are you sure you want to delete this contact?"} %>
+      </span>  
+    </div>
+  </div>
+
+
+<% end %>
+
+
+
