so much done - styling of forms, relationship with userid and contact

--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -35,5 +35,9 @@
   <%= @contact.info %>
 </p>
 
+<p>
+This contact was added by <%= @contact.user.first_name %>
+</p>
+
 <%= link_to 'Edit', edit_contact_path(@contact) %> |
 <%= link_to 'Back', contacts_path %>
