--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@contact) do |f| %>
+<%= simple_form_for(@contact, html: {class: "form-horizontal"}, role: "form") do |f| %>
   <% if @contact.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
@@ -11,35 +11,19 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="form-group">
+
+    <%= f.input :name %>
+    <%= f.input :category %>
+    <%= f.input :area %>
+    <%= f.input :phone %>
+    <%= f.input :website %>
+    <%= f.input :email %>
+    <%= f.input :user_id, collection: User.all, label_method: :first_name %>
+    <%= f.button :submit, class: "btn-success" %>
   </div>
-  <div class="field">
-    <%= f.label :category %><br>
-    <%= f.text_field :category %>
-  </div>
-  <div class="field">
-    <%= f.label :area %><br>
-    <%= f.text_field :area %>
-  </div>
-  <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.number_field :phone %>
-  </div>
-  <div class="field">
-    <%= f.label :website %><br>
-    <%= f.text_field :website %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :info %><br>
-    <%= f.text_area :info %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+   
+
+  
+
 <% end %>
