--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,30 +1,26 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="col-md-4">
+    <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), html: {class: "well"}) do |f| %>
+      <%= devise_error_messages! %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <fieldset>
+        <legend>Sign up</legend>
+        <div class="form-group">
+          <%= f.input :first_name %>
+          <%= f.input :last_name %>
+          <%= f.input :profile_name %>
+          <%= f.input :organisation %>
+          <%= f.input :email %>
+          <%= f.input :password %>
+          <%= f.input :password_confirmation %>
+          <%= f.button :submit, "Sign up", class: "btn btn-success" %>
+        </div>
+      </fieldset> 
+    <% end %>
 
-   <div><%= f.label :first_name %><br />
-  <%= f.text_field :first_name %></div>
-
-  <div><%= f.label :last_name %><br />
-  <%= f.text_field :last_name %></div>
-
-  <div><%= f.label :profile_name %><br />
-  <%= f.text_field :profile_name %></div>
-
-  <div><%= f.label :organisation %><br />
-  <%= f.text_field :organisation %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
+  </div>
+  <div class="col-md-8">
+    <h2>Signing up is easy and secure</h2>
+  </div>
+</div>
