--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,29 @@
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	<div class="container'">
+	<div class="container-fluid">
 		<a href="#" class="navbar-brand">Kogarah DAS</a>
 		<ul class="nav navbar-nav">
 			<li><%= link_to "All contacts", contacts_path %></li>
+		</ul>
+
+		
+		<ul class="nav navbar-nav navbar-right">
+			<% if user_signed_in? %>
+				<li> <%= link_to current_user.full_name, edit_user_registration_path %></li>
+				<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+			<% else %>
+				<li><%= link_to "Register", new_user_registration_path %></li>
+				<li><%= link_to "Sign in", new_user_session_path %></li>
+			<% end %>
+
+
+		</ul>
+		
+		
 	</div>
 </nav>
+
 <div class="container">
 
 <p class="notice"><%= notice %></p>
