--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,27 +1,32 @@
-<%= simple_form_for(@contact, html: {class: "form-horizontal"}, role: "form") do |f| %>
-  <% if @contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
+<div class="row">
+  <div class="col-md-4">
 
-      <ul>
-      <% @contact.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+      <%= simple_form_for(@contact, html: {class: "form-inline well"}, role: "form") do |f| %>
+        <% if @contact.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
 
-  <div class="form-group">
+            <ul>
+            <% @contact.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
 
-    <%= f.input :name %>
-    <%= f.input :category %>
-    <%= f.input :area %>
-    <%= f.input :phone %>
-    <%= f.input :website %>
-    <%= f.input :email %>
-    <%= f.input :user_id, collection: User.all, label_method: :first_name %>
-    <%= f.button :submit, class: "btn-success" %>
+        <div class="form-group">
+
+          <%= f.input :name %>
+          <%= f.input :category %>
+          <%= f.input :area %>
+          <%= f.input :phone %>
+          <%= f.input :website %>
+          <%= f.input :email %>
+          <%= f.input :user_id, collection: User.all, label_method: :first_name %>
+          <%= f.button :submit, class: "btn-success" %>
+        </div>
   </div>
+</div>
    
 
   
