--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,9 +32,13 @@
 </nav>
 
 <div class="container">
+	<% flash.each do |type, message| %>
+		<div class="alert <%= flash_class type %>">
+  			<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  			<%= message %>
+		</div>
+	<% end %>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
 	<%= yield %>
 </div>
 
