--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,10 +12,13 @@
  *= require_tree .
  */
 body{
-	padding-top: 30px;
+	padding-top: 40px;
 }
 
 .alert{
 	margin-top:30px;
 }
 
+.row{
+	margin-top:30px;
+}
