--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,6 +24,8 @@
   <div class="col-md-6">
     <h3>Unhappy? - Cancel my account</h3>
 
+    <%= f.button :submit, "Cancel my account", class: "btn btn-success" %>
+
     <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>
   </div>
 </div>
