--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,12 +21,18 @@
     <% end %>
 
   </div>
-  <div class="col-md-6">
-    <h3>Unhappy? - Cancel my account</h3>
+  <div class="col-md-4">
+  </div>
+  <div class="col-md-4">
+    <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, class: "well"}) do |f| %>
+      <%= devise_error_messages! %>
+       <fieldset>
+            <legend>Unhappy? - cancel my account</legend>
+            <%= f.button :submit, "Cancel my account", class: "btn btn-warning", :data => { :confirm => "Are you sure?" }, :method => :delete %>
+        </fieldset>
+    <% end %>
 
-    <%= f.button :submit, "Cancel my account", class: "btn btn-success" %>
-
-    <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %>
+    
   </div>
 </div>
 
