--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Profiles#show</h1>
-<p>Find me in app/views/profiles/show.html.erb</p>
+
+<div class="page-header">
+	<h1>Contacts added by <%= @user.full_name %></h1>
+</div>
+
+<% if @contacts %>
+	<% @contacts.each do |contact| %>
+		<div class="well">
+			<%= link_to contact.name, contact_path(contact) %>
+			<hr />
+			Added <%=  time_ago_in_words(contact.created_at) %> ago
+		</div>
+	<% end %>
+<% end %>
