--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 		<a href="#" class="navbar-brand">Kogarah DAS</a>
 		<ul class="nav navbar-nav">
 			<li><%= link_to "All contacts", contacts_path %></li>
+			<li><%= link_to "List by area", listarea_path %></li>
 		</ul>
 
 		
