--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,5 +1,9 @@
 <p id="notice"><%= notice %></p>
 
+<div class="page-header">
+    <h1>Contact info for <%= @contact.name %></h1>    
+</div>
+
 <p>
   <strong>Name:</strong>
   <%= @contact.name %>
@@ -30,14 +34,25 @@
   <%= @contact.email %>
 </p>
 
-<p>
-  <strong>Info:</strong>
-  <%= @contact.info %>
-</p>
+<% if @contact.document && @contact.document.attachment? %>
+  <span class="label label-info"> Attachement</span>
+  <%= link_to @contact.documents.attachment_filen_nae, @contact.document.attachmentl.ul %>
+  <hr />
+<% end %>
 
-<p>
-This contact was added by <%= @contact.user.first_name %>
-</p>
+<p><em>
+This contact was added by <%= @contact.user.first_name %> <%=  time_ago_in_words(@contact.created_at) %> ago
+</em></p>
 
-<%= link_to 'Edit', edit_contact_path(@contact) %> |
-<%= link_to 'Back', contacts_path %>
+<% if @contact.user == current_user %>
+  <div class="meta">
+    <span class="admin">
+      <%= link_to "Edit", edit_contact_path(@contact) %>  |
+      <%= link_to "Delete", @contact, method: :delete, data: { confirm: "Are you sure you want to delete this contact?"} %> |
+      <%= link_to 'Back', contacts_path %>
+    </span>
+  </div>
+<% else %>
+  <%= link_to 'Back', contacts_path %>
+<% end %>
+
