--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 <![endif]-->
 <body>
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	<div class="container-fluid">
+	<div class="container">
 		<a href="#" class="navbar-brand">Kogarah DAS</a>
 		<ul class="nav navbar-nav">
 			<li><%= link_to "All contacts", contacts_path %></li>
